Fix display two line of card on firefox

--- a/app/assets/stylesheets/components/_course_card.scss
+++ b/app/assets/stylesheets/components/_course_card.scss
@@ -99,6 +99,18 @@
       overflow: hidden;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
+      line-height: 1.4em;
+      height: 2.8em;
+    }
+    .ellipsis-2lines:after {
+      content: "";
+      text-align: right;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 70%;
+      height: 1.2em;
+      background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%);
     }
     .course-title {
       font-weight: 500;
